--- a/tmpls/header.go.tmpl
+++ b/tmpls/header.go.tmpl
@@ -20,13 +20,15 @@ func exitMissingArg(u clapUsagePrinter, name string) {
 	claperr("not enough args: no \033[1;33m%s\033[0m provided\n", name)
 	u.printUsage(os.Stderr)
 	os.Exit(1)
-}{{ if .HasSubcmds }}
+}
 
+{{ if .HasSubcmds -}}
 func exitUnknownCmd(u clapUsagePrinter, name string) {
 	claperr("unknown command '%%s'\n", name)
 	u.printUsage(os.Stderr)
 	os.Exit(1)
-}{{ end }}
+}
+{{- end }}
 
 func exitUsgGood(u clapUsagePrinter) {
 	u.printUsage(os.Stdout)
