--- a/tmpls/usagefunc.go.tmpl
+++ b/tmpls/usagefunc.go.tmpl
@@ -1,6 +1,6 @@
 
 func (*{{ .TypeName }}) printUsage(to *os.File) {
-	fmt.Fprintf(to, `{{ .Parents }}{{ .DocName }} - {{ .Data.Blurb }}
+	fmt.Fprintf(to, `{{ .Parents }}{{ .UsgName }} - {{ .Data.Blurb }}
 
 usage:{{ range .UsageLines }}
    {{ . }}{{ end }}
@@ -9,21 +9,21 @@ usage:{{ range .UsageLines }}
 
 options:
 {{- range .Opts }}
-   {{ printf "%-*s   %s" $w .DocNames .Data.Blurb -}}
+   {{ printf "%-*s   %s" $w .UsgNames .Data.Blurb -}}
 {{ end -}}{{ end -}}
 {{- if .HasArgs }}
 {{- $w := .ArgNamesColWidth }}
 
 arguments:
 {{- range .Args }}
-   {{ printf "%-*s   %s" $w .DocName .Data.Blurb -}}
+   {{ printf "%-*s   %s" $w .UsgName .Data.Blurb -}}
 {{ end -}}{{ end -}}
 {{ if .HasSubcmds }}
 {{- $w := .SubcmdNamesColWidth }}
 
 subcommands:
 {{- range .Subcmds }}
-   {{ printf "%-*s   %s" $w .DocName .Data.Blurb -}}
+   {{ printf "%-*s   %s" $w .UsgName .Data.Blurb -}}
 {{ end -}}{{ end }}
 {{- if and .IsRoot .HasSubcmds }}
 
