fix double blank line if there are no subcommands

--- a/tmpls/header.go.tmpl
+++ b/tmpls/header.go.tmpl
@@ -22,7 +22,8 @@ func exitMissingArg(u clapUsagePrinter, name string) {
 	os.Exit(1)
 }
 
-{{ if .HasSubcmds -}}
+{{- if .HasSubcmds }}
+
 func exitUnknownCmd(u clapUsagePrinter, name string) {
 	claperr("unknown command '%%s'\n", name)
 	u.printUsage(os.Stderr)
