codegen: catch and fail on unknown options

--- a/tmpls/parsefunc.go.tmpl
+++ b/tmpls/parsefunc.go.tmpl
@@ -49,6 +49,9 @@ func (c *{{ .TypeName }}) parse(args []string) {
 			}
 		{{- end -}}
 	{{ end }}
+		default:
+			claperr("unknown option '%s'\n", k)
+			os.Exit(1)
 		}
 	}
 
