use a string builder and move the newline and initial space padding back into template where it is for args and subcommands right now

--- a/tmpls/usagefunc.go.tmpl
+++ b/tmpls/usagefunc.go.tmpl
@@ -9,8 +9,8 @@ usage:{{ range .UsageLines }}
 	{{- $nameWidth := .OptNameColWidth }}
 	{{- $argNameWidth := .OptArgNameColWidth }}
 
-options:
-	{{- range .Opts }}{{ .Usg $nameWidth $argNameWidth }}{{ end -}}
+options:{{ range .Opts }}
+   {{ .Usg $nameWidth $argNameWidth }}{{ end -}}
 {{ end -}}
 
 {{- if .HasArgs }}
