codegen: improve the option parts of usage messages (#9)
this change swaps the ordering of option names in usage messages, so that the 
short name (or empty space) comes first, then the long name (ex: `-v,
--version`). additionally, for non-boolean options, the argument name (or
"<arg>" by default) is printed after the option names (ex: `--name <arg>`).

--- a/tmpls/usagefunc.go.tmpl
+++ b/tmpls/usagefunc.go.tmpl
@@ -4,22 +4,24 @@ func (*{{ .TypeName }}) printUsage(to *os.File) {
 
 usage:{{ range .UsageLines }}
    {{ . }}{{ end }}
-{{- if .HasOptions }}
-{{- $w := .OptNamesColWidth }}
 
-options:
-{{- range .Opts }}
-   {{ printf "%-*s   %s" $w .UsgNames .Data.Blurb -}}
-{{ end -}}{{ end -}}
+{{- if .HasOptions }}
+	{{- $nameWidth := .OptNameColWidth }}
+	{{- $argNameWidth := .OptArgNameColWidth }}
+
+options:{{ range .Opts }}
+   {{ .Usg $nameWidth $argNameWidth }}{{ end -}}
+{{ end -}}
+
 {{- if .HasArgs }}
-{{- $w := .ArgNamesColWidth }}
+{{- $w := .ArgNameColWidth }}
 
 arguments:
 {{- range .Args }}
    {{ printf "%-*s   %s" $w .UsgName .Data.Blurb -}}
 {{ end -}}{{ end -}}
 {{ if .HasSubcmds }}
-{{- $w := .SubcmdNamesColWidth }}
+{{- $w := .SubcmdNameColWidth }}
 
 subcommands:
 {{- range .Subcmds }}
