parse+gen: read command overview with some quick and dirty word wrapping

--- a/tmpls/usagefunc.go.tmpl
+++ b/tmpls/usagefunc.go.tmpl
@@ -1,6 +1,10 @@
 
 func (*{{ .TypeName }}) printUsage(to *os.File) {
 	fmt.Fprintf(to, `{{ .Parents }}{{ .UsgName }} - {{ .Data.Blurb }}
+{{- with .Overview }}
+
+overview:
+{{ . }}{{ end }}
 
 usage:{{ range .UsageLines }}
    {{ . }}{{ end }}
