gen: put option arg name in first column instead of its own

--- a/tmpls/usagefunc.go.tmpl
+++ b/tmpls/usagefunc.go.tmpl
@@ -11,10 +11,9 @@ usage:{{ range .UsageLines }}
 
 {{- if .HasOptions }}
 	{{- $nameWidth := .OptNameColWidth }}
-	{{- $argNameWidth := .OptArgNameColWidth }}
 
 options:{{ range .Opts }}
-   {{ .Usg $nameWidth $argNameWidth }}{{ end -}}
+   {{ .Usg $nameWidth }}{{ end -}}
 {{ end -}}
 
 {{- if .HasArgs }}
