--- a/tmpls/header.go.tmpl
+++ b/tmpls/header.go.tmpl
@@ -71,3 +71,49 @@ func optParts(arg string) (string, string, bool) {
 	}
 	return arg, "", false
 }
+
+type clapOpt struct {
+	long  string
+	short string
+	into  interface{}
+}
+
+func parseOpts(args []string, u clapUsagePrinter, data []clapOpt) int {
+	var i int
+argsLoop:
+	for ; i < len(args); i++ {
+		if args[i][0] != '-' {
+			break
+		}
+		if args[i] == "--" {
+			i++
+			break
+		}
+		k, eqv, hasEq := optParts(args[i][1:])
+		if k == "h" || k == "help" {
+			exitUsgGood(u)
+		}
+		for z := range data {
+			if k == data[z].long || k == data[z].short {
+				switch into := data[z].into.(type) {
+				case *bool:
+					*into = clapParseBool(eqv)
+				case *string:
+					if hasEq {
+						*into = eqv
+					} else if i == len(args)-1 {
+						claperr("string option '%s' needs an argument\n", k)
+						os.Exit(1)
+					} else {
+						i++
+						*into = args[i]
+					}
+				}
+				continue argsLoop
+			}
+		}
+		claperr("unknown option '%s'\n", k)
+		os.Exit(1)
+	}
+	return i
+}
