gen: fix whitespace error in root command parse func

--- a/tmpls/parsefunc.go.tmpl
+++ b/tmpls/parsefunc.go.tmpl
@@ -8,7 +8,7 @@ func (c *{{ .TypeName }}) parse(args []string) {
 	{{- end -}}
 
 	{{- /* Parse environment variables. */}}
-	{{ range .EnvVals -}}
+	{{- range .EnvVals }}
 	clapSetEnv("{{ .VarName }}", &c.{{ .FieldName }})
 	{{- end }}
 
