--- a/tmpls/parsefunc.go.tmpl
+++ b/tmpls/parsefunc.go.tmpl
@@ -15,6 +15,12 @@ func (c *{{ .TypeName }}) parse(args []string) {
 		c.{{ .FieldName }} = z.pBool()
 		{{- else if .FieldType.IsString }}
 		c.{{ .FieldName }} = z.val()
+		{{- else if .FieldType.IsInt }}
+		c.{{ .FieldName }} = {{ .FieldType }}(z.pInt({{ .FieldType.BitSize }}))
+		{{- else if .FieldType.IsUint }}
+		c.{{ .FieldName }} = {{ .FieldType }}(z.pUint({{ .FieldType.BitSize }}))
+		{{- else if .FieldType.IsFloat }}
+		c.{{ .FieldName }} = {{ .FieldType }}(z.pFloat({{ .FieldType.BitSize }}))
 		{{- end }}
 	}
 	{{- end }}
@@ -37,6 +43,8 @@ func (c *{{ .TypeName }}) parse(args []string) {
 			c.{{ .FieldName }} = {{ .FieldType }}(z.pInt({{ .FieldType.BitSize }}))
 		{{- else if .FieldType.IsUint }}
 			c.{{ .FieldName }} = {{ .FieldType }}(z.pUint({{ .FieldType.BitSize }}))
+		{{- else if .FieldType.IsFloat }}
+			c.{{ .FieldName }} = {{ .FieldType }}(z.pFloat({{ .FieldType.BitSize }}))
 		{{- end -}}
 	{{- end }}
 		default:
