--- a/tmpls/header.go.tmpl
+++ b/tmpls/header.go.tmpl
@@ -46,15 +46,13 @@ type clapper struct {
 
 {{- if .RootCmd.HasEnvArgOrOptSomewhere }}
 
-	currEnvName string
-	currEnvVal  string
+	envName string
+	envVal  string
 {{- end }}
 
-	curr struct {
-		key   string
-		eqVal string
-		hasEq bool
-	}
+	optName  string
+	optEqVal string
+	optHasEq bool
 }
 
 func (c *clapper) exitUsgGood() {
@@ -65,8 +63,8 @@ func (c *clapper) exitUsgGood() {
 {{- if .RootCmd.HasEnvArgOrOptSomewhere }}
 
 func (z *clapper) stageEnv(name string) (ok bool) {
-	z.currEnvName = name
-	z.currEnvVal, ok = os.LookupEnv(name)
+	z.envName = name
+	z.envVal, ok = os.LookupEnv(name)
 	return ok
 }
 {{- end }}
@@ -96,18 +94,16 @@ func (c *clapper) stageOpt() bool {
 	if arg[0] == '-' {
 		arg = arg[1:]
 	}
+	c.optEqVal = ""
 	if eqIdx := strings.IndexByte(arg, '='); eqIdx != -1 {
-		c.curr.key = arg[:eqIdx]
-		eqVal := ""
+		c.optName = arg[:eqIdx]
 		if eqIdx < len(arg) {
-			eqVal = arg[eqIdx+1:]
+			c.optEqVal = arg[eqIdx+1:]
 		}
-		c.curr.eqVal = eqVal
-		c.curr.hasEq = true
+		c.optHasEq = true
 	} else {
-		c.curr.key = arg
-		c.curr.hasEq = false
-		c.curr.eqVal = ""
+		c.optName = arg
+		c.optHasEq = false
 	}
 
 	c.skip = false
@@ -116,8 +112,8 @@ func (c *clapper) stageOpt() bool {
 
 func (c *clapper) val() string {
 {{- if .RootCmd.HasEnvArgOrOptSomewhere }}
-	if c.currEnvName != "" {
-		return c.currEnvVal
+	if c.envName != "" {
+		return c.envVal
 	}
 {{- end }}
 	if c.optsDone {
@@ -125,12 +121,12 @@ func (c *clapper) val() string {
 		c.idx++
 		return s
 	}
-	if c.curr.hasEq {
-		return c.curr.eqVal
+	if c.optHasEq {
+		return c.optEqVal
 	}
 	c.skip = true
 	if c.idx == len(c.args)-1 {
-		claperr("option '%s' needs an argument\n", c.curr.key)
+		claperr("option '%s' needs an argument\n", c.optName)
 		os.Exit(1)
 	}
 	return c.args[c.idx+1]
@@ -139,7 +135,7 @@ func (c *clapper) val() string {
 {{- if .Types.HasBool }}
 
 func (c *clapper) pBool() bool {
-	s := c.curr.eqVal
+	s := c.optEqVal
 	if s == "" || s == "true" || s == "1" {
 		return true
 	}
@@ -156,7 +152,7 @@ func (c *clapper) pBool() bool {
 func (c *clapper) pInt(bs int) int64 {
 	i64, err := strconv.ParseInt(c.val(), 10, bs)
 	if err != nil {
-		claperr("invalid argument for '%s': %v\n", c.curr.key, err)
+		claperr("invalid argument for '%s': %v\n", c.optName, err)
 		os.Exit(1)
 	}
 	return i64
@@ -168,7 +164,7 @@ func (c *clapper) pInt(bs int) int64 {
 func (c *clapper) pUint(bs int) uint64 {
 	u64, err := strconv.ParseUint(c.val(), 10, bs)
 	if err != nil {
-		claperr("invalid argument for '%s': %v\n", c.curr.key, err)
+		claperr("invalid argument for '%s': %v\n", c.optName, err)
 		os.Exit(1)
 	}
 	return u64
@@ -180,7 +176,7 @@ func (c *clapper) pUint(bs int) uint64 {
 func (c *clapper) pFloat(bs int) float64 {
 	f64, err := strconv.ParseFloat(c.val(), bs)
 	if err != nil {
-		claperr("invalid argument for '%s': %v\n", c.curr.key, err)
+		claperr("invalid argument for '%s': %v\n", c.optName, err)
 		os.Exit(1)
 	}
 	return f64
