tidy exit missing arg code

--- a/tmpls/parsefunc.go.tmpl
+++ b/tmpls/parsefunc.go.tmpl
@@ -60,7 +60,7 @@ func (c *{{ .TypeName }}) parse(args []string) {
 		{{- /* Add error handling for missing arguments that are required. */ -}}
 		{{- range $i, $arg := .RequiredArgs }}
 	if len(args) < {{ add $i 1 }} {
-		exitMissingArg(c, "{{ $arg.UsgName }}")
+		z.exitMissingArg("{{ $arg.UsgName }}")
 	}
 		{{- end -}}
 
