--- a/tmpls/header.go.tmpl
+++ b/tmpls/header.go.tmpl
@@ -19,24 +19,6 @@ type clapUsagePrinter interface {
 	printUsage(to *os.File)
 }
 
-{{- if .RootCmd.HasReqArgSomewhere }}
-
-func exitMissingArg(u clapUsagePrinter, name string) {
-	claperr("not enough args: no \033[1;33m%s\033[0m provided\n", name)
-	u.printUsage(os.Stderr)
-	os.Exit(1)
-}
-{{- end }}
-
-{{- if .RootCmd.HasSubcmds }}
-
-func (z *clapper) exitUnknownCmd(name string) {
-	claperr("unknown command '%s'\n", name)
-	z.cmd.printUsage(os.Stderr)
-	os.Exit(1)
-}
-{{- end }}
-
 type clapper struct {
 	cmd      clapUsagePrinter
 	args     []string
@@ -59,6 +41,24 @@ func (c *clapper) exitUsgGood() {
 	c.cmd.printUsage(os.Stdout)
 	os.Exit(0)
 }
+
+{{- if .RootCmd.HasReqArgSomewhere }}
+
+func (z *clapper) exitMissingArg(name string) {
+	claperr("not enough args: no \033[1;33m%s\033[0m provided\n", name)
+	z.cmd.printUsage(os.Stderr)
+	os.Exit(1)
+}
+{{- end }}
+
+{{- if .RootCmd.HasSubcmds }}
+
+func (z *clapper) exitUnknownCmd(name string) {
+	claperr("unknown command '%s'\n", name)
+	z.cmd.printUsage(os.Stderr)
+	os.Exit(1)
+}
+{{- end }}
 
 {{- if .RootCmd.HasEnvArgOrOptSomewhere }}
 
